--- a/composition.html
+++ b/composition.html
@@ -150,10 +150,11 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <ul>
 <li class="chapter" data-level="2.1" data-path="data.html"><a href="data.html#file-system"><i class="fa fa-check"></i><b>2.1</b> File system</a></li>
 <li class="chapter" data-level="2.2" data-path="data.html"><a href="data.html#targets"><i class="fa fa-check"></i><b>2.2</b> Targets</a></li>
-<li class="chapter" data-level="2.3" data-path="data.html"><a href="data.html#progress"><i class="fa fa-check"></i><b>2.3</b> Progress</a></li>
-<li class="chapter" data-level="2.4" data-path="data.html"><a href="data.html#metadata"><i class="fa fa-check"></i><b>2.4</b> Metadata</a></li>
-<li class="chapter" data-level="2.5" data-path="data.html"><a href="data.html#skipping-up-to-date-targets"><i class="fa fa-check"></i><b>2.5</b> Skipping up-to-date targets</a></li>
-<li class="chapter" data-level="2.6" data-path="data.html"><a href="data.html#databases"><i class="fa fa-check"></i><b>2.6</b> Databases</a></li>
+<li class="chapter" data-level="2.3" data-path="data.html"><a href="data.html#process"><i class="fa fa-check"></i><b>2.3</b> Process</a></li>
+<li class="chapter" data-level="2.4" data-path="data.html"><a href="data.html#progress"><i class="fa fa-check"></i><b>2.4</b> Progress</a></li>
+<li class="chapter" data-level="2.5" data-path="data.html"><a href="data.html#metadata"><i class="fa fa-check"></i><b>2.5</b> Metadata</a></li>
+<li class="chapter" data-level="2.6" data-path="data.html"><a href="data.html#skipping-up-to-date-targets"><i class="fa fa-check"></i><b>2.6</b> Skipping up-to-date targets</a></li>
+<li class="chapter" data-level="2.7" data-path="data.html"><a href="data.html#databases"><i class="fa fa-check"></i><b>2.7</b> Databases</a></li>
 </ul></li>
 <li class="chapter" data-level="3" data-path="classes.html"><a href="classes.html"><i class="fa fa-check"></i><b>3</b> Major internal classes</a>
 <ul>
